kubernetes/default.networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: k8s-ns1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
